# advent_of_code

./: Cargo.toml  README.md  advent_of_code.code-workspace
src/: aoc_2024.rs  input.rs  lib.rs  main.rs
src/aoc_2024/: aoc_2024_day_01.rs  aoc_2024_day_02.rs  aoc_2024_day_03.rs  aoc_2024_day_04.rs  aoc_2024_day_05.rs  aoc_2024_day_06.rs  aoc_2024_day_07.rs  aoc_2024_day_08.rs  aoc_2024_day_09.rs  aoc_2024_day_10.rs  aoc_2024_day_11.rs  aoc_2024_day_12.rs  aoc_2024_day_13.rs  aoc_2024_day_14.rs
src/templates/: aoc_2024_day_.rs
src/utils/: maps.rs
