[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
rayon = "1.10.0"
colored = "2.2.0"
rand = "0.8.5"

# is needed for cargo flamegraph
[profile.release]
debug = true
